--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
     <title>Happy 21th Birthday Denden</title>
 </head>
 <body>
-    <div class="wrapper">
-        <div>item 1</div>
-        <div>item 2</div>
-        <div>item 3</div>
-        <div>item 4</div>
-        <div>item 5</div>
-        <div>item 6</div>
-        <div>item 7</div>
-        <div>item 8</div>
-      </div>
+<div class="wrapper">
+    <div class="item">box</div>
+    <div class="item">box</div>
+    <div class="item">box</div>
+    <div class="item">box</div>
+    <div class="item">box</div>
+</div>
       
 </body>
 </html>
