list splash screen.

--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy 21th Birthday Denden</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Syncopate:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="splash">
+        <h1>Happy 21st Birthday Denden!</h1>
+    </div>
+    
     <header>
         <nav>
             <ul>
-             <li>Home</li>
-             <li>Greetings</li>
+             <li>Happy</li>
+             <li>Birthday</li>
+             <li>Dennise</li>
             </ul>
         </nav>
     </header>
@@ -25,7 +31,7 @@
         <h1>Happy</h1>
     </div>
     <div class="block block2">
-        <h1>21th</h1>
+        <h1>21st</h1>
     </div>
     <div class="block block3">
         <h1>Birthday</h1>
