splash screen finished

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <div class="splash">
-        <h1>Happy 21st Birthday Denden!</h1>
+        <h1 class="fadeIn">Happy 21st Birthday Denden!</h1>
     </div>
-    
+
     <header>
         <nav>
             <ul>
@@ -50,6 +50,7 @@
     </div>
 </div>
 <script src="index.js"></script>
+<script src="app.js"></script>
 <script>
     var blocks = document.getElementsByClassName("block");
     var container = document.getElementsByClassName("container");
