--- a/index.html
+++ b/index.html
@@ -10,20 +10,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Syncopate:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="splash">
+    <!--<div class="splash">
         <h1 class="fadeIn">Happy 21st Birthday Denden!</h1>
-    </div>
-
-    <header>
-        <nav>
-            <ul>
-             <li>Happy</li>
-             <li>Birthday</li>
-             <li>Dennise</li>
-            </ul>
-        </nav>
-    </header>
-<div class="container">
+    </div> -->
+<div class="container" >
     <div class="block">
         <h1>Hello M</h1>
     </div>
@@ -36,21 +26,21 @@
     <div class="block block3">
         <h1>Birthday</h1>
     </div>
-    <div class="block block1">
+    <div class="block block4">
         <h1>Happy</h1>
-    </div>
-    <div class="block block2">
+        </div>
+    <div class="block block5">
         <h1>21th</h1>
     </div>
-    <div class="block block3">
+    <div class="block block6">
         <h1>Birthday</h1>
     </div>
-    <div class="block block11">
+    <div class="block block7">
         <h1>Dennise!</h1>
     </div>
 </div>
 <script src="index.js"></script>
-<script src="app.js"></script>
+<!--<script src="app.js"></script> -->
 <script>
     var blocks = document.getElementsByClassName("block");
     var container = document.getElementsByClassName("container");
