--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </div> -->
 <div class="container" >
     <div class="block">
-        <h1>Hello M</h1>
+        <h1>Happy Birthday!</h1>
     </div>
     <div class="block block1">
-        <h1>Happy</h1>
+        <h1>HAVE A GOOD DAY</h1>
     </div>
     <div class="block block2">
         <h1>21st</h1>
@@ -40,6 +40,7 @@
     </div>
 </div>
 <script src="index.js"></script>
+<script src="background-color.js"></script>
 <!--<script src="app.js"></script> -->
 <script>
     var blocks = document.getElementsByClassName("block");
