--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Syncopate:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!--<div class="splash">
+    <div class="splash">
         <h1 class="fadeIn">Happy 21st Birthday Denden!</h1>
-    </div> -->
+    </div>
 <div class="container" >
     <div class="block">
-        <h1>Happy Birthday!</h1>
+        <h1>Happy 21st Birthday!</h1>
     </div>
     <div class="block block1">
-        <h1>HAVE A GOOD DAY</h1>
+        <h1>Dennise Myka</h1>
     </div>
     <div class="block block2">
         <h1>21st</h1>
@@ -40,8 +40,7 @@
     </div>
 </div>
 <script src="index.js"></script>
-<script src="background-color.js"></script>
-<!--<script src="app.js"></script> -->
+<script src="app.js"></script>
 <script>
     var blocks = document.getElementsByClassName("block");
     var container = document.getElementsByClassName("container");
