Happy Bday Denden

--- a/index.html
+++ b/index.html
@@ -14,29 +14,29 @@
         <h1 class="fadeIn">Happy 21st Birthday Denden!</h1>
     </div> -->
 <div class="container" >
-    <div class="block">
+    <div class="block entry">
         <h1>Happy 21st Birthday!</h1>
     </div>
     <div class="block block1">
         <h1>Dennise Myka</h1>
     </div>
     <div class="block block2">
-        <h1>21st</h1>
+        <h1>Enjoy</h1>
     </div>
     <div class="block block3">
-        <h1>Birthday</h1>
+        <h1>Your Day</h1>
     </div>
     <div class="block block4">
-        <h1>Happy</h1>
+        <h1>We Wish You</h1>
         </div>
     <div class="block block5">
-        <h1>21th</h1>
+        <h1>Long Life</h1>
     </div>
     <div class="block block6">
-        <h1>Birthday</h1>
+        <h1>and</h1>
     </div>
     <div class="block block7">
-        <h1>Dennise!</h1>
+        <h1>Good Health!</h1>
     </div>
 </div>
 <script src="index.js"></script>
