--- a/index.html
+++ b/index.html
@@ -14,29 +14,71 @@
         <h1 class="fadeIn">Happy 21st Birthday Denden!</h1>
     </div> -->
 <div class="container" >
-    <div class="block entry">
+    <div class="block entry">   
         <h1>Happy 21st Birthday!</h1>
     </div>
-    <div class="block block1">
+    <div class="block block1 card">
         <h1>Dennise Myka</h1>
-    </div>
-    <div class="block block2">
-        <h1>Enjoy</h1>
-    </div>
-    <div class="block block3">
-        <h1>Your Day</h1>
-    </div>
-    <div class="block block4">
-        <h1>We Wish You</h1>
+        <div class="ccontent">
+            <h2>Happy Birthday M!</h2>
+            <p>Happy Birthday M, I wish you good health and please enjoy life to the fullest.
+            </p>
         </div>
-    <div class="block block5">
+        <img src="beidog-removebg-preview.png" alt="">
+    </div>
+    <div class="block block2 card">
+        <h1>Enjoy</h1>
+        <div class="ccontent">
+            <h2>Happy Birthday M!</h2>
+            <p>Happy Birthday M, I wish you good health and please enjoy life to the fullest.
+            </p>    
+        </div>
+        <img src="beidog-removebg-preview.png" alt="">
+    </div>
+    <div class="block block3 card">
+        <h1>Your Day</h1>
+        <div class="ccontent">
+            <h2>Happy Birthday M!</h2>
+            <p>Happy Birthday M, I wish you good health and please enjoy life to the fullest.
+            </p>
+        </div>
+        <img src="beidog-removebg-preview.png" alt="">
+    </div>
+    <div class="block block4 card">
+        <h1>We Wish You</h1>
+        <div class="ccontent">
+            <h2>Happy Birthday M!</h2>
+            <p>Happy Birthday M, I wish you good health and please enjoy life to the fullest.
+            </p>
+        </div>
+        <img src="beidog-removebg-preview.png" alt="">
+        </div>
+    <div class="block block5 card">
         <h1>Long Life</h1>
+        <div class="ccontent">
+            <h2>Happy Birthday M!</h2>
+            <p>Happy Birthday M, I wish you good health and please enjoy life to the fullest.
+            </p>
+        </div>
+        <img src="beidog-removebg-preview.png" alt="">
     </div>
-    <div class="block block6">
+    <div class="block block6 card">
         <h1>and</h1>
+        <div class="ccontent">
+            <h2>Happy Birthday M!</h2>
+            <p>Happy Birthday M, I wish you good health and please enjoy life to the fullest.
+            </p>
+        </div>
+        <img src="beidog-removebg-preview.png" alt="">
     </div>
-    <div class="block block7">
+    <div class="block block7 card">
         <h1>Good Health!</h1>
+        <div class="ccontent">
+            <h2>Happy Birthday M!</h2>
+            <p>Happy Birthday M, I wish you good health and please enjoy life to the fullest.
+            </p>
+        </div>
+        <img src="beidog-removebg-preview.png" alt="">
     </div>
 </div>
 <script src="index.js"></script>
