--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
         <h1>Long Life</h1>
         <div class="ccontent">
             <h2>Happy Birthday M!</h2>
-            <p>Happy Birthday M, I wish you good health and please enjoy life to the fullest.
+            <p>Happy Birthday M, I wish you good health <br>
+                and please enjoy life to the fullest.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+                Ipsam architecto voluptatibus tenetur natus perferendis eveniet, <br>
+                ipsum cupiditate suscipit aliquam corrupti.
             </p>
         </div>
         <img src="beidog-removebg-preview.png" alt="">
