--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy 21th Birthday Denden</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Raleway&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Syncopate:wght@700&display=swap" rel="stylesheet">
 </head>
@@ -21,7 +22,8 @@
         <h1>Dennise Myka</h1>
         <div class="ccontent">
             <h2>Happy Birthday M!</h2>
-            <p>Happy Birthday M, I wish you good health and please enjoy life to the fullest.
+            <p>Happy Birthday M, I wish you good health 
+                <br>and please enjoy life to the fullest.
             </p>
         </div>
         <img src="beidog-removebg-preview.png" alt="">
