--- a/index.html
+++ b/index.html
@@ -21,72 +21,41 @@
     <div class="block block1 card">
         <h1>Dennise Myka</h1>
         <div class="ccontent">
-            <h2>Happy Birthday M!</h2>
-            <p>Happy Birthday M, I wish you good health 
-                <br>and please enjoy life to the fullest.
+            <h2>Thank you m,</h2>
+            <p>For everything you do.
+                <br> For your support, I mean everything.
+                <br> I just wanna wish you good health.
             </p>
         </div>
-        <img src="beidog-removebg-preview.png" alt="">
     </div>
     <div class="block block2 card">
-        <h1>Enjoy</h1>
+        <h1>Thank you so much</h1>
         <div class="ccontent">
-            <h2>Happy Birthday M!</h2>
-            <p>Happy Birthday M, I wish you good health and please enjoy life to the fullest.
+            <h2>For the good times</h2>
+            <p> You're always there, genuinely <br>
+                happy for me. I can't even fathom <br>
+                how lucky I am. 
             </p>    
         </div>
-        <img src="beidog-removebg-preview.png" alt="">
     </div>
     <div class="block block3 card">
-        <h1>Your Day</h1>
+        <h1>I wish you Good Health</h1>
         <div class="ccontent">
-             <h2>Happy Birthday M!</h2>
-            <p>Happy Birthday M, I wish you good health and please enjoy life to the fullest.
+             <h2>Through Ups and Downs</h2>
+            <p>Life's hard. Thank you so much <br>
+            Thank you for not giving up on us.
             </p>
         </div>
-        <img src="beidog-removebg-preview.png" alt="">
     </div>
     <div class="block block4 card">
-        <h1>We Wish You</h1>
+        <h1>I love you</h1>
         <div class="ccontent">
             <h2>Happy Birthday M!</h2>
             <p>Happy Birthday M, I wish you good health and please enjoy life to the fullest.
             </p>
         </div>
-        <img src="beidog-removebg-preview.png" alt="">
         </div>
-    <div class="block block5 card">
-        <h1>Long Life</h1>
-        <div class="ccontent">
-            <h2>Happy Birthday M!</h2>
-            <p>Happy Birthday M, I wish you good health <br>
-                and please enjoy life to the fullest.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
-                Ipsam architecto voluptatibus tenetur natus perferendis eveniet, <br>
-                ipsum cupiditate suscipit aliquam corrupti.
-            </p>
-        </div>
-        <img src="beidog-removebg-preview.png" alt="">
-    </div>
-    <div class="block block6 card">
-        <h1>and</h1>
-        <div class="ccontent">
-            <h2>Happy Birthday M!</h2>
-            <p>Happy Birthday M, I wish you good health and please enjoy life to the fullest.
-            </p>
-        </div>
-        <img src="beidog-removebg-preview.png" alt="">
-    </div>
-    <div class="block block7 card">
-        <h1>Good Health!</h1>
-        <div class="ccontent">
-            <h2>Happy Birthday M!</h2>
-            <p>Happy Birthday M, I wish you good health and please enjoy life to the fullest.
-            </p>
-        </div>
-        <img src="beidog-removebg-preview.png" alt="">
-    </div>
-</div>
+
 <script src="index.js"></script>
 <!--<script src="app.js"></script>-->
 <script>
