--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         <h1>I love you</h1>
         <div class="ccontent">
             <h2>Happy Birthday M!</h2>
-            <p>Happy Birthday M, I wish you good health and please enjoy life to the fullest.
+            <p>I really love you. <br>
+            Thank you so much for everything. 
             </p>
         </div>
         </div>
